# SingNote

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: index.md
docs/archive/: legacy-long-press-component.md
docs/getting-started/: codebase-tour.md  quickstart.md
docs/guides/: architecture-overview.md  key-workflow.md  testing-and-verification.md
docs/reference/: api-contracts.md  artifacts.md  commands.md  glossary.md  observability.md  performance.md  security.md  troubleshooting.md
docs/song-research/: kakes-synitheies-synthesis.md  kakes-synitheies-v1-nikolas.md  kakes-synitheies-v2-greekrocker.md
seed_data/songs/: kakes-synitheies.yaml  wish-you-were-here.json  wish-you-were-here.yaml
src/singnote/: __init__.py  auth.py  bootstrap.py  config.py  seeds.py
src/singnote/components/: __init__.py  long_press_note_editor.py
src/singnote/components/long_press_note_editor_frontend/: index.html
src/singnote/domain/: __init__.py  models.py
src/singnote/storage/: __init__.py  models.py  repository.py
src/singnote/ui/: __init__.py  authoring.py  home.py  theme.py
static/: site.webmanifest
tests/: __init__.py  conftest.py  support.py  test_app_smoke.py  test_auth.py  test_authoring.py  test_bootstrap.py  test_domain_models.py  test_home_helpers.py  test_repository.py  test_seeds.py
